--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "CONCURRENT_TASKS": 10,
-  "IS_NTFY": false,
+  "DATA_SERVER_URL": "https://sc-private-miner-kgt3lbt42a-an.a.run.app",
   "PUBLIC_SMALL_PLAYCOUNT_THRESHOLD": 50000,
   "PRIVATE_BIG_ARTIST_THRESHOLD": 1000,
   "PRIVATE_SMALL_ARTIST_URLS_FILENAME": "mining_private_small_artist_urls.txt",
